fix: overflow

--- a/src/app/show/show.component.scss
+++ b/src/app/show/show.component.scss
@@ -2,9 +2,9 @@
   position: relative;
   margin-top: -5rem;
   background-image: url("../../assets/blue-sky-with-clouds.png");
-  background-size: 110% 100%;
-  background-position: center;
-  height: calc(100vh + 8rem);
+  background-size: 110% 110%;
+  background-position: top;
+  height: 90vh;
   z-index: 998;
 }
 
@@ -23,4 +23,10 @@
 
 app-label {
   display: block;
+}
+
+img {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
